--- a/06_Dom/One.html
+++ b/06_Dom/One.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom Learning</title>
+
+    <style>
+       body{
+            background-color: #212121;
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body>
     <div class="bg_black">
-        <h1 class="heading">DOM LEARNING</h1>
+        <h1 id="title" class="heading">DOM LEARNING</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci iusto quia quasi porro animi, quis voluptates ab amet, consectetur deleniti itaque quod in pariatur omnis voluptatem alias quo nulla nam.\</p>
     </div>
     
